Updated Noob Test Experiment

--- a/Noob_Test.ipynb
+++ b/Noob_Test.ipynb
@@ -35,7 +35,7 @@
        "\n",
        "                Logging results to <a href=\"https://wandb.com\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
        "                Project page: <a href=\"https://app.wandb.ai/19soumik-rakshit96/transformer-pytorch\" target=\"_blank\">https://app.wandb.ai/19soumik-rakshit96/transformer-pytorch</a><br/>\n",
-       "                Run page: <a href=\"https://app.wandb.ai/19soumik-rakshit96/transformer-pytorch/runs/19n8lu61\" target=\"_blank\">https://app.wandb.ai/19soumik-rakshit96/transformer-pytorch/runs/19n8lu61</a><br/>\n",
+       "                Run page: <a href=\"https://app.wandb.ai/19soumik-rakshit96/transformer-pytorch/runs/38sf68bj\" target=\"_blank\">https://app.wandb.ai/19soumik-rakshit96/transformer-pytorch/runs/38sf68bj</a><br/>\n",
        "            "
       ],
       "text/plain": [
@@ -48,7 +48,7 @@
     {
      "data": {
       "text/plain": [
-       "W&B Run: https://app.wandb.ai/19soumik-rakshit96/transformer-pytorch/runs/19n8lu61"
+       "W&B Run: https://app.wandb.ai/19soumik-rakshit96/transformer-pytorch/runs/38sf68bj"
       ]
      },
      "execution_count": 2,
@@ -133,7 +133,8 @@
      "output_type": "stream",
      "text": [
       "/usr/local/lib/python3.6/dist-packages/torch/nn/_reduction.py:43: UserWarning: size_average and reduce args will be deprecated, please use reduction='sum' instead.\n",
-      "  warnings.warn(warning.format(ret))\n"
+      "  warnings.warn(warning.format(ret))\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[32m\u001b[41mERROR\u001b[0m Error uploading \"config.yaml\": FileNotFoundError, [Errno 2] No such file or directory: '/tmp/tmp2ub37ny8wandb/h7bw0f8p-config.yaml'\n"
      ]
     }
    ],
@@ -169,7 +170,7 @@
      "text": [
       "/usr/local/lib/python3.6/dist-packages/torch/nn/_reduction.py:43: UserWarning: size_average and reduce args will be deprecated, please use reduction='sum' instead.\n",
       "  warnings.warn(warning.format(ret))\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[32m\u001b[41mERROR\u001b[0m Error uploading \"config.yaml\": FileNotFoundError, [Errno 2] No such file or directory: '/tmp/tmpnr0jv7uqwandb/2bv8aijp-config.yaml'\n"
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[32m\u001b[41mERROR\u001b[0m Error uploading \"config.yaml\": FileNotFoundError, [Errno 2] No such file or directory: '/tmp/tmpzyg8opxgwandb/1wo1eitw-config.yaml'\n"
      ]
     }
    ],
@@ -259,7 +260,7 @@
     {
      "data": {
       "text/plain": [
-       "[<wandb.wandb_torch.TorchGraph at 0x7f56f9ed5940>]"
+       "[<wandb.wandb_torch.TorchGraph at 0x7f8f7b220588>]"
       ]
      },
      "execution_count": 10,
@@ -286,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -307,8 +308,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20it [00:07,  2.70it/s]\n",
-      "5it [00:01,  4.12it/s]\n",
+      "20it [00:08,  2.39it/s]\n",
+      "5it [00:01,  3.80it/s]\n",
       "0it [00:00, ?it/s]"
      ]
     },
@@ -323,8 +324,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20it [00:06,  3.12it/s]\n",
-      "5it [00:01,  4.58it/s]\n",
+      "20it [00:07,  2.53it/s]\n",
+      "5it [00:01,  3.48it/s]\n",
       "0it [00:00, ?it/s]"
      ]
     },
@@ -339,8 +340,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20it [00:06,  3.05it/s]\n",
-      "5it [00:01,  3.98it/s]\n",
+      "20it [00:07,  2.60it/s]\n",
+      "5it [00:01,  3.59it/s]\n",
       "0it [00:00, ?it/s]"
      ]
     },
@@ -355,8 +356,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20it [00:06,  3.13it/s]\n",
-      "5it [00:01,  2.93it/s]\n",
+      "20it [00:07,  2.65it/s]\n",
+      "5it [00:01,  2.54it/s]\n",
       "0it [00:00, ?it/s]"
      ]
     },
@@ -371,8 +372,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20it [00:06,  2.90it/s]\n",
-      "5it [00:01,  3.14it/s]\n",
+      "20it [00:07,  2.57it/s]\n",
+      "5it [00:01,  3.52it/s]\n",
       "0it [00:00, ?it/s]"
      ]
     },
@@ -387,8 +388,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20it [00:06,  2.93it/s]\n",
-      "5it [00:01,  3.84it/s]\n",
+      "20it [00:08,  2.41it/s]\n",
+      "5it [00:01,  3.34it/s]\n",
       "0it [00:00, ?it/s]"
      ]
     },
@@ -403,8 +404,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20it [00:06,  3.02it/s]\n",
-      "5it [00:01,  4.18it/s]\n",
+      "20it [00:08,  2.47it/s]\n",
+      "5it [00:01,  3.21it/s]\n",
       "0it [00:00, ?it/s]"
      ]
     },
@@ -419,8 +420,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20it [00:06,  2.96it/s]\n",
-      "5it [00:01,  2.84it/s]\n",
+      "20it [00:07,  2.54it/s]\n",
+      "5it [00:01,  2.57it/s]\n",
       "0it [00:00, ?it/s]"
      ]
     },
@@ -435,7 +436,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "11it [00:03,  3.07it/s]"
+      "20it [00:07,  2.51it/s]\n",
+      "5it [00:01,  3.45it/s]\n",
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "20it [00:07,  2.55it/s]\n",
+      "5it [00:01,  3.35it/s]\n"
      ]
     }
    ],
@@ -462,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,9 +506,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10]])\n"
+     ]
+    }
+   ],
    "source": [
     "model.eval()\n",
     "source = torch.autograd.Variable(\n",
