--- a/German-English.ipynb
+++ b/German-English.ipynb
@@ -588,6 +588,86 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "valid_iter = DataIterator(\n",
+    "    val, batch_size=1200, device=0,\n",
+    "    repeat=False, sort_key=lambda x: (len(x.src), len(x.trg)),\n",
+    "    batch_size_fn=batch_size_function, train=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "model_parameters = torch.nn.DataParallel(model, device_ids=[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "model_optimizer = NoamOptimizer(\n",
+    "    model.source_embedding[0].d_model, 1, 2000,\n",
+    "    torch.optim.Adam(\n",
+    "        model.parameters(), lr=0,\n",
+    "        betas=(0.9, 0.98), eps=1e-9\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def train(epochs):\n",
+    "    for epoch in range(epochs):\n",
+    "        print('Epochs:', (epochs + 1))\n",
+    "        model_parameters.train()\n",
+    "        train_step(\n",
+    "            (rebatch(pad_idx, b) for b in train_iter), \n",
+    "            model_par, MultiGPULossCompute(\n",
+    "                model.generator, criterion,\n",
+    "                devices=[0], opt=model_optimizer\n",
+    "            )\n",
+    "        )\n",
+    "        model_par.eval()\n",
+    "        loss = train_step(\n",
+    "            (rebatch(pad_idx, b) for b in valid_iter), \n",
+    "            model_par, MultiGPULossCompute(\n",
+    "                model.generator, criterion, \n",
+    "                devices=devices, opt=None\n",
+    "            )\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
@@ -600,11 +680,25 @@
     }
    ],
    "source": [
-    "valid_iter = DataIterator(\n",
-    "    val, batch_size=1200, device=0,\n",
-    "    repeat=False, sort_key=lambda x: (len(x.src), len(x.trg)),\n",
-    "    batch_size_fn=batch_size_function, train=False\n",
-    ")"
+    "def train(epochs):\n",
+    "    for epoch in range(epochs):\n",
+    "        print('Epochs:', (epochs + 1))\n",
+    "        model_parameters.train()\n",
+    "        train_step(\n",
+    "            (rebatch(pad_idx, b) for b in train_iter), \n",
+    "            model_par, MultiGPULossCompute(\n",
+    "                model.generator, criterion,\n",
+    "                devices=[0], opt=model_optimizer\n",
+    "            )\n",
+    "        )\n",
+    "        model_par.eval()\n",
+    "        loss = train_step(\n",
+    "            (rebatch(pad_idx, b) for b in valid_iter), \n",
+    "            model_par, MultiGPULossCompute(\n",
+    "                model.generator, criterion, \n",
+    "                devices=devices, opt=None\n",
+    "            )\n",
+    "        )"
    ]
   },
   {
@@ -643,15 +737,15 @@
     "        model_parameters.train()\n",
     "        train_step(\n",
     "            (rebatch(pad_idx, b) for b in train_iter), \n",
-    "            model_par, MultiGPULossCompute(\n",
+    "            model_parameters, MultiGPULossCompute(\n",
     "                model.generator, criterion,\n",
     "                devices=[0], opt=model_optimizer\n",
     "            )\n",
     "        )\n",
-    "        model_par.eval()\n",
+    "        model_parameters.eval()\n",
     "        loss = train_step(\n",
     "            (rebatch(pad_idx, b) for b in valid_iter), \n",
-    "            model_par, MultiGPULossCompute(\n",
+    "            model_parameters, MultiGPULossCompute(\n",
     "                model.generator, criterion, \n",
     "                devices=devices, opt=None\n",
     "            )\n",
@@ -675,7 +769,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.6"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "metadata": {
+     "collapsed": false
+    },
+    "source": []
+   }
   }
  },
  "nbformat": 4,
