--- a/German-English-IWSLT.ipynb
+++ b/German-English-IWSLT.ipynb
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -588,88 +588,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
-   "source": [
-    "valid_iter = DataIterator(\n",
-    "    val, batch_size=1200, device=0,\n",
-    "    repeat=False, sort_key=lambda x: (len(x.src), len(x.trg)),\n",
-    "    batch_size_fn=batch_size_function, train=False\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "model_parameters = torch.nn.DataParallel(model, device_ids=[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "model_optimizer = NoamOptimizer(\n",
-    "    model.source_embedding[0].d_model, 1, 2000,\n",
-    "    torch.optim.Adam(\n",
-    "        model.parameters(), lr=0,\n",
-    "        betas=(0.9, 0.98), eps=1e-9\n",
-    "    )\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def train(epochs):\n",
-    "    for epoch in range(epochs):\n",
-    "        print('Epochs:', (epochs + 1))\n",
-    "        model_parameters.train()\n",
-    "        train_step(\n",
-    "            (rebatch(pad_idx, b) for b in train_iter), \n",
-    "            model_par, MultiGPULossCompute(\n",
-    "                model.generator, criterion,\n",
-    "                devices=[0], opt=model_optimizer\n",
-    "            )\n",
-    "        )\n",
-    "        model_par.eval()\n",
-    "        loss = train_step(\n",
-    "            (rebatch(pad_idx, b) for b in valid_iter), \n",
-    "            model_par, MultiGPULossCompute(\n",
-    "                model.generator, criterion, \n",
-    "                devices=devices, opt=None\n",
-    "            )\n",
-    "        )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -680,6 +604,55 @@
     }
    ],
    "source": [
+    "valid_iter = DataIterator(\n",
+    "    val, batch_size=1200, device=0,\n",
+    "    repeat=False, sort_key=lambda x: (len(x.src), len(x.trg)),\n",
+    "    batch_size_fn=batch_size_function, train=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "model_parameters = torch.nn.DataParallel(model, device_ids=[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "model_optimizer = NoamOptimizer(\n",
+    "    model.source_embedding[0].d_model, 1, 2000,\n",
+    "    torch.optim.Adam(\n",
+    "        model.parameters(), lr=0,\n",
+    "        betas=(0.9, 0.98), eps=1e-9\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
     "def train(epochs):\n",
     "    for epoch in range(epochs):\n",
     "        print('Epochs:', (epochs + 1))\n",
@@ -703,7 +676,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(epochs):\n",
+    "    for epoch in range(epochs):\n",
+    "        print('Epochs:', (epochs + 1))\n",
+    "        model_parameters.train()\n",
+    "        train_step(\n",
+    "            (rebatch(pad_idx, b) for b in train_iter), \n",
+    "            model_par, MultiGPULossCompute(\n",
+    "                model.generator, criterion,\n",
+    "                devices=[0], opt=model_optimizer\n",
+    "            )\n",
+    "        )\n",
+    "        model_par.eval()\n",
+    "        loss = train_step(\n",
+    "            (rebatch(pad_idx, b) for b in valid_iter), \n",
+    "            model_par, MultiGPULossCompute(\n",
+    "                model.generator, criterion, \n",
+    "                devices=devices, opt=None\n",
+    "            )\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,20 +727,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train(epochs):\n",
     "    for epoch in range(epochs):\n",
-    "        print('Epochs:', (epochs + 1))\n",
+    "        print('Epochs:', (epoch + 1))\n",
     "        model_parameters.train()\n",
     "        train_step(\n",
     "            (rebatch(pad_idx, b) for b in train_iter), \n",
     "            model_parameters, MultiGPULossCompute(\n",
     "                model.generator, criterion,\n",
     "                devices=[0], opt=model_optimizer\n",
-    "            )\n",
+    "            ), log_on_wandb=False\n",
     "        )\n",
     "        model_parameters.eval()\n",
     "        loss = train_step(\n",
@@ -748,9 +748,57 @@
     "            model_parameters, MultiGPULossCompute(\n",
     "                model.generator, criterion, \n",
     "                devices=devices, opt=None\n",
-    "            )\n",
+    "            ), log_on_wandb=False\n",
     "        )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epochs: 11\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.6/dist-packages/torch/nn/parallel/_functions.py:61: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "  warnings.warn('Was asked to gather along dimension 0, but all '\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch Step: 1 Loss: 9.000000 Tokens per Sec: 2270.000000\n",
+      "Epoch Step: 51 Loss: 8.000000 Tokens per Sec: 5592.000000\n",
+      "Epoch Step: 101 Loss: 7.000000 Tokens per Sec: 5655.000000\n",
+      "Epoch Step: 151 Loss: 6.000000 Tokens per Sec: 5527.000000\n",
+      "Epoch Step: 201 Loss: 5.000000 Tokens per Sec: 5441.000000\n",
+      "Epoch Step: 251 Loss: 5.000000 Tokens per Sec: 5558.000000\n",
+      "Epoch Step: 301 Loss: 5.000000 Tokens per Sec: 5441.000000\n",
+      "Epoch Step: 351 Loss: 5.000000 Tokens per Sec: 5500.000000\n",
+      "Epoch Step: 401 Loss: 5.000000 Tokens per Sec: 5558.000000\n",
+      "Epoch Step: 451 Loss: 5.000000 Tokens per Sec: 5605.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "train(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -769,7 +817,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.8"
   },
   "pycharm": {
    "stem_cell": {
