--- a/German-English-IWSLT.ipynb
+++ b/German-English-IWSLT.ipynb
@@ -6,8 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import spacy\n",
     "import torch\n",
+    "import wandb\n",
     "from tqdm import tqdm\n",
     "from src.model import Transformer\n",
     "from torchtext import data, datasets\n",
@@ -16,12 +18,51 @@
     "from src.training import (\n",
     "    LabelSmoothing, DataIterator, rebatch,\n",
     "    batch_size_function, NoamOptimizer, train_step\n",
-    ")"
+    ")\n",
+    "from secret import WANDB_API_KEY"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                Logging results to <a href=\"https://wandb.com\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
+       "                Project page: <a href=\"https://app.wandb.ai/19soumik-rakshit96/transformer-pytorch\" target=\"_blank\">https://app.wandb.ai/19soumik-rakshit96/transformer-pytorch</a><br/>\n",
+       "                Run page: <a href=\"https://app.wandb.ai/19soumik-rakshit96/transformer-pytorch/runs/3eb9a3vu\" target=\"_blank\">https://app.wandb.ai/19soumik-rakshit96/transformer-pytorch/runs/3eb9a3vu</a><br/>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "W&B Run: https://app.wandb.ai/19soumik-rakshit96/transformer-pytorch/runs/3eb9a3vu"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.environ['WANDB_API_KEY'] = WANDB_API_KEY\n",
+    "os.environ['WANDB_NOTEBOOK_NAME'] = 'German-English-IWSLT'\n",
+    "wandb.init(project=\"transformer-pytorch\", name=\"German-English-IWSLT\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,9 +98,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "downloading de-en.tgz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "de-en.tgz: 100%|██████████| 24.2M/24.2M [00:22<00:00, 1.09MB/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".data/iwslt/de-en/IWSLT16.TED.dev2010.de-en.de.xml\n",
+      ".data/iwslt/de-en/IWSLT16.TED.dev2010.de-en.en.xml\n",
+      ".data/iwslt/de-en/IWSLT16.TED.tst2010.de-en.de.xml\n",
+      ".data/iwslt/de-en/IWSLT16.TED.tst2010.de-en.en.xml\n",
+      ".data/iwslt/de-en/IWSLT16.TED.tst2011.de-en.de.xml\n",
+      ".data/iwslt/de-en/IWSLT16.TED.tst2011.de-en.en.xml\n",
+      ".data/iwslt/de-en/IWSLT16.TED.tst2012.de-en.de.xml\n",
+      ".data/iwslt/de-en/IWSLT16.TED.tst2012.de-en.en.xml\n",
+      ".data/iwslt/de-en/IWSLT16.TED.tst2013.de-en.de.xml\n",
+      ".data/iwslt/de-en/IWSLT16.TED.tst2013.de-en.en.xml\n",
+      ".data/iwslt/de-en/IWSLT16.TED.tst2014.de-en.de.xml\n",
+      ".data/iwslt/de-en/IWSLT16.TED.tst2014.de-en.en.xml\n",
+      ".data/iwslt/de-en/IWSLT16.TEDX.dev2012.de-en.de.xml\n",
+      ".data/iwslt/de-en/IWSLT16.TEDX.dev2012.de-en.en.xml\n",
+      ".data/iwslt/de-en/IWSLT16.TEDX.tst2013.de-en.de.xml\n",
+      ".data/iwslt/de-en/IWSLT16.TEDX.tst2013.de-en.en.xml\n",
+      ".data/iwslt/de-en/IWSLT16.TEDX.tst2014.de-en.de.xml\n",
+      ".data/iwslt/de-en/IWSLT16.TEDX.tst2014.de-en.en.xml\n",
+      ".data/iwslt/de-en/train.tags.de-en.de\n",
+      ".data/iwslt/de-en/train.tags.de-en.en\n"
+     ]
+    }
+   ],
    "source": [
     "max_length = 100\n",
     "\n",
@@ -72,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +634,7 @@
        ")"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,14 +649,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The `device` argument should be set by using `torch.device` or passing a string as an argument. This behavior will be deprecated soon and currently defaults to cpu.\n"
+      "WARNING:torchtext.data.iterator:The `device` argument should be set by using `torch.device` or passing a string as an argument. This behavior will be deprecated soon and currently defaults to cpu.\n"
      ]
     }
    ],
@@ -588,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -599,7 +681,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The `device` argument should be set by using `torch.device` or passing a string as an argument. This behavior will be deprecated soon and currently defaults to cpu.\n"
+      "WARNING:torchtext.data.iterator:The `device` argument should be set by using `torch.device` or passing a string as an argument. This behavior will be deprecated soon and currently defaults to cpu.\n"
      ]
     }
    ],
@@ -645,65 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def train(epochs):\n",
-    "    for epoch in range(epochs):\n",
-    "        print('Epochs:', (epochs + 1))\n",
-    "        model_parameters.train()\n",
-    "        train_step(\n",
-    "            (rebatch(pad_idx, b) for b in train_iter), \n",
-    "            model_par, MultiGPULossCompute(\n",
-    "                model.generator, criterion,\n",
-    "                devices=[0], opt=model_optimizer\n",
-    "            )\n",
-    "        )\n",
-    "        model_par.eval()\n",
-    "        loss = train_step(\n",
-    "            (rebatch(pad_idx, b) for b in valid_iter), \n",
-    "            model_par, MultiGPULossCompute(\n",
-    "                model.generator, criterion, \n",
-    "                devices=devices, opt=None\n",
-    "            )\n",
-    "        )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def train(epochs):\n",
-    "    for epoch in range(epochs):\n",
-    "        print('Epochs:', (epochs + 1))\n",
-    "        model_parameters.train()\n",
-    "        train_step(\n",
-    "            (rebatch(pad_idx, b) for b in train_iter), \n",
-    "            model_par, MultiGPULossCompute(\n",
-    "                model.generator, criterion,\n",
-    "                devices=[0], opt=model_optimizer\n",
-    "            )\n",
-    "        )\n",
-    "        model_par.eval()\n",
-    "        loss = train_step(\n",
-    "            (rebatch(pad_idx, b) for b in valid_iter), \n",
-    "            model_par, MultiGPULossCompute(\n",
-    "                model.generator, criterion, \n",
-    "                devices=devices, opt=None\n",
-    "            )\n",
-    "        )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,28 +764,35 @@
     "            model_parameters, MultiGPULossCompute(\n",
     "                model.generator, criterion,\n",
     "                devices=[0], opt=model_optimizer\n",
-    "            ), log_on_wandb=False\n",
+    "            ), log_on_wandb=True\n",
     "        )\n",
     "        model_parameters.eval()\n",
     "        loss = train_step(\n",
     "            (rebatch(pad_idx, b) for b in valid_iter), \n",
     "            model_parameters, MultiGPULossCompute(\n",
     "                model.generator, criterion, \n",
-    "                devices=devices, opt=None\n",
-    "            ), log_on_wandb=False\n",
+    "                devices=[0], opt=None\n",
+    "            ), log_on_wandb=True\n",
     "        )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0it [00:00, ?it/s]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epochs: 11\n"
+      "Epochs: 1\n"
      ]
     },
     {
@@ -769,23 +800,22 @@
      "output_type": "stream",
      "text": [
       "/usr/local/lib/python3.6/dist-packages/torch/nn/parallel/_functions.py:61: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
-      "  warnings.warn('Was asked to gather along dimension 0, but all '\n"
+      "  warnings.warn('Was asked to gather along dimension 0, but all '\n",
+      "1it [00:01,  1.88s/it]/usr/local/lib/python3.6/dist-packages/torch/nn/parallel/_functions.py:61: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "  warnings.warn('Was asked to gather along dimension 0, but all '\n",
+      "3754it [13:47,  4.54it/s]\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch Step: 1 Loss: 9.000000 Tokens per Sec: 2270.000000\n",
-      "Epoch Step: 51 Loss: 8.000000 Tokens per Sec: 5592.000000\n",
-      "Epoch Step: 101 Loss: 7.000000 Tokens per Sec: 5655.000000\n",
-      "Epoch Step: 151 Loss: 6.000000 Tokens per Sec: 5527.000000\n",
-      "Epoch Step: 201 Loss: 5.000000 Tokens per Sec: 5441.000000\n",
-      "Epoch Step: 251 Loss: 5.000000 Tokens per Sec: 5558.000000\n",
-      "Epoch Step: 301 Loss: 5.000000 Tokens per Sec: 5441.000000\n",
-      "Epoch Step: 351 Loss: 5.000000 Tokens per Sec: 5500.000000\n",
-      "Epoch Step: 401 Loss: 5.000000 Tokens per Sec: 5558.000000\n",
-      "Epoch Step: 451 Loss: 5.000000 Tokens per Sec: 5605.000000\n"
+     "ename": "NameError",
+     "evalue": "name 'devices' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-84557d09d340>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-14-9f7803f16a3d>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(epochs)\u001b[0m\n\u001b[1;32m     15\u001b[0m             model_parameters, MultiGPULossCompute(\n\u001b[1;32m     16\u001b[0m                 \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgenerator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m                 \u001b[0mdevices\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdevices\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mopt\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m             ), log_on_wandb=True\n\u001b[1;32m     19\u001b[0m         )\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'devices' is not defined"
      ]
     }
    ],
